--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "php": "^7.0",
         "omnipay/common": "~2.0",
-        "league/iso3166": "^2.1"
+        "league/iso3166": "^2.1",
+        "giggsey/libphonenumber-for-php": "8.12.*"
     },
     "require-dev": {
         "omnipay/tests": "~2.0",
