Add refund function. Added authcode to payment response (required by later refund).

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "Custom OmniPay driver for Global Payments",
     "keywords": ["omnipay", "globalpayments"],
-    "homepage": "https://gitlab.totallydev.com/digitickets/omnipay-global-payments",
+    "homepage": "https://github.com/digitickets/omnipay-global-payments",
     "autoload": {
         "psr-4": { "Omnipay\\GlobalPayments\\" : "src/" }
     },
@@ -16,7 +16,8 @@
         "php": "^7.0",
         "omnipay/common": "~2.0",
         "league/iso3166": "^2.1",
-        "giggsey/libphonenumber-for-php": "8.12.*"
+        "giggsey/libphonenumber-for-php": "8.13.*",
+        "globalpayments/php-sdk": "^3.1"
     },
     "require-dev": {
         "omnipay/tests": "~2.0",
